--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -29,6 +29,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginTop="8dp"
+            android:onClick="handleClicks"
             android:src="@drawable/ic_thumb_up"
             app:layout_constraintEnd_toStartOf="@+id/tvLikeCount"
             app:layout_constraintHorizontal_bias="0.5"
@@ -55,8 +56,10 @@
             android:id="@+id/ivDislike"
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
+            android:onClick="handleClicks"
             android:src="@drawable/ic_dislike_thumb"
             app:layout_constraintBottom_toBottomOf="@+id/ivLike"
             app:layout_constraintEnd_toStartOf="@+id/tvDislikeCount"
@@ -68,6 +71,7 @@
             android:id="@+id/tvDislikeCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textStyle="bold"
